# pico-csync-generator

./: CMakeLists.txt  README.md  main.c  pico2w_csync_step1.uf2
